--- a/MLopss_assignment1.ipynb
+++ b/MLopss_assignment1.ipynb
@@ -37,7 +37,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Q1. Print multiplication table from 1 to 10"
+        "Q1. Print multiplication Table from 1 to 10"
       ],
       "metadata": {
         "id": "i3GplYoCqa89"
@@ -63,7 +63,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "ENTER A NUMBER2\n",
+            "ENTER A NUMBER 2\n",
             "2*1=2\n",
             "2*2=4\n",
             "2*3=6\n",
@@ -361,7 +361,7 @@
       "cell_type": "code",
       "source": [
         "def show_employee(name,salary=9000):\n",
-        "   print(f\"Name: {name} salary: {salary}\")\n",
+        "   print(f\"Name: {name} Salary: {salary}\")\n",
         "\n",
         "\n",
         "show_employee(\"Bill Gates\", 12000)\n",
@@ -389,7 +389,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Q8. Write a program to identify words that contain both letters and digits from a given input string.\n",
+        "Q8. Write a program that identify words that contain both letters and digits from a given input string.\n",
         "\n",
         "    Given str1 = \"Harry25 is Gryffindor Wizard50 and cursed\"\n",
         "\n",
